--- a/example/package.json
+++ b/example/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hexagon/base64": "^1.1.28",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.14",
+    "expo-application": "^5.8.3",
+    "expo-build-properties": "^0.11.1",
+    "expo-constants": "^15.4.5",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -24,9 +28,12 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-quick-base64": "^2.0.8",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
@@ -39,5 +46,10 @@
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "autolinking": {
+      "nativeModulesDir": ".."
+    }
+  }
 }
