--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.passkeyexample'
+    namespace 'io.mintgarden.badger'
     defaultConfig {
-        applicationId 'com.passkeyexample'
+        applicationId 'io.mintgarden.badger'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
